[package]
name = "cryptocraft"
version = "0.1.0"
edition = "2021"
description = "CryptoCraft - A proof-of-work cryptocurrency miner"
authors = ["You"]

[[bin]]
name = "cryptocraft"
path = "src/main.rs"

[dependencies]
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
crossterm = "0.27"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"
num_cpus = "1.16"
rayon = "1.10"
argon2 = "0.5"
rpassword = "7.3"
uuid = { version = "1.8", features = ["v4"] }
tiny_http = "0.12"
if-addrs = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
